--- a/sass/Style.scss
+++ b/sass/Style.scss
@@ -122,24 +122,26 @@ div.media-wrapper {
       text-decoration: none;
       box-shadow: 0px 3px 4px rgba(255, 255, 255, 0.5);
       transition: all 0.3s ease;
-      &:hover > i {
-        transform: scale(1.2) rotate(-25deg);
-        color: #fff;
-      }
-      &:hover {
-        transform: translate(0, -5px);
-      }
-      &:nth-child(1):hover {
-        background-color: #e4405f;
-      }
-      &:nth-child(2):hover {
-        background-color: #3b5999;
-      }
-      &:nth-child(3):hover {
-        background-color: #cd201f;
-      }
-      &:nth-child(4):hover {
-        background-color: #d68204;
+      @media (hover: hover) {
+        &:hover > i {
+          transform: scale(1.2) rotate(-25deg);
+          color: #fff;
+        }
+        &:hover {
+          transform: translate(0, -5px);
+        }
+        &:nth-child(1):hover {
+          background-color: #e4405f;
+        }
+        &:nth-child(2):hover {
+          background-color: #3b5999;
+        }
+        &:nth-child(3):hover {
+          background-color: #cd201f;
+        }
+        &:nth-child(4):hover {
+          background-color: #d68204;
+        }
       }
     }
   }
