--- a/css/Style.css
+++ b/css/Style.css
@@ -175,7 +175,7 @@ div.media-wrapper div.media a:nth-child(4):hover {
 }
 
 @media (hover: none) {
-  a:hover {
+  a:hover, a:hover > i {
     color: inherit;
   }
 }
