Stop hover on touch devices

--- a/css/Style.css
+++ b/css/Style.css
@@ -175,7 +175,13 @@ div.media-wrapper div.media a:nth-child(4):hover {
 }
 
 @media (hover: none) {
-  a:hover, a:hover > i {
+  a:hover {
+    color: inherit;
+  }
+}
+
+@media (hover: none) {
+  div.media-wrapper div.media a:hover > i {
     color: inherit;
   }
 }
