--- a/css/Style.css
+++ b/css/Style.css
@@ -175,19 +175,19 @@ div.media-wrapper div.media a:nth-child(4):hover {
 }
 
 @media (hover: none) {
-  a:hover {
+  a:link {
     color: #fff;
   }
 }
 
 @media (hover: none) {
-  div.media-wrapper div.media a:hover > i {
+  div.media-wrapper div.media a:link > i {
     color: #000;
   }
 }
 
 @media (hover: none) {
-  div.media-wrapper div.media a:hover {
+  div.media-wrapper div.media a:link {
     background-color: #fff;
   }
 }
