--- a/sass/Style.scss
+++ b/sass/Style.scss
@@ -25,7 +25,7 @@ nav.bg-dark {
 
 .picHover {
   filter: grayscale(100%);
-  &:hover {
+  body.hasHover &:hover {
     filter: none;
     cursor: pointer;
   }
@@ -125,18 +125,12 @@ div.media-wrapper {
       text-decoration: none;
       box-shadow: 0px 3px 4px rgba(255, 255, 255, 0.5);
       transition: all 0.3s ease;
-      &:hover > i {
+      body.hasHover &:hover > i {
         transform: scale(1.2) rotate(-25deg);
         color: #fff;
-        @media (hover: none), (hover:on-demand) {
-          color: #000;
-        }
       }
-      &:hover {
+      body.hasHover &:hover {
         transform: translate(0, -5px);
-        @media (hover: none), (hover:on-demand) {
-          transform: none;
-        }
       }
       &:nth-child(1):hover {
         background-color: #e4405f;
@@ -154,20 +148,3 @@ div.media-wrapper {
   }
 }
 
-@media (hover: none),
-(hover:on-demand) {
-  a:hover {
-    color: #fff;
-  }
-}
-
-@media (hover: none),
-(hover:on-demand) {
-  div.media-wrapper {
-    div.media {
-      a:hover {
-        background-color: #fff;
-      }
-    }
-  }
-}
