--- a/sass/Style.scss
+++ b/sass/Style.scss
@@ -132,16 +132,16 @@ div.media-wrapper {
       body.hasHover &:hover {
         transform: translate(0, -5px);
       }
-      &:nth-child(1):hover {
+      body.hasHover &:nth-child(1):hover {
         background-color: #e4405f;
       }
-      &:nth-child(2):hover {
+      body.hasHover &:nth-child(2):hover {
         background-color: #3b5999;
       }
-      &:nth-child(3):hover {
+      body.hasHover &:nth-child(3):hover {
         background-color: #cd201f;
       }
-      &:nth-child(4):hover {
+      body.hasHover &:nth-child(4):hover {
         background-color: #d68204;
       }
     }
