--- a/sass/Style.scss
+++ b/sass/Style.scss
@@ -148,3 +148,104 @@ div.media-wrapper {
   }
 }
 
+#back-to-top-btn {
+  display: none;
+  justify-content: center; // When JS function make it to display as inline-flex
+  align-items: center; // When JS function make it to display as inline-flex
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(30, 0, 51);
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+  transition-property: background-color, color;
+}
+
+#back-to-top-btn:hover,
+#back-to-top-btn:focus {
+  background-color: #fff;
+  color: rgb(30, 0, 51);
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  #back-to-top-btn {
+    width: 45px;
+    height: 45px;
+    font-size: 30px;
+    bottom: 15px;
+    right: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  #back-to-top-btn {
+    width: 35px;
+    height: 35px;
+    font-size: 25px;
+    bottom: 15px;
+    right: 15px;
+  }
+}
+
+.btnEntrance {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: btnEntrance;
+}
+/* zoomIn */
+/* @keyframes btnEntrance {
+  from {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  to {
+    opacity: 1;
+  }
+} */
+
+/* fadeInUp */
+@keyframes btnEntrance {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.btnExit {
+  animation-duration: 0.25s;
+  animation-fill-mode: both;
+  animation-name: btnExit;
+}
+/* zoomOut */
+/* @keyframes btnExit {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+} */
+
+/* fadeOutDown */
+@keyframes btnExit {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+}
