--- a/sass/Style.scss
+++ b/sass/Style.scss
@@ -17,6 +17,10 @@ body {
   color: $primary-text-color;
 }
 
+body {
+  padding-top: 70px !important;
+}
+
 .navbar {
   min-height: 70px;
   .container {
