--- a/css/Style.css
+++ b/css/Style.css
@@ -17,6 +17,61 @@ body {
   padding-top: 70px !important;
 }
 
+div.loader {
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+div.loader img {
+  width: 150px;
+  height: auto;
+}
+
+div.loader h5 {
+  color: #000;
+  position: relative;
+  bottom: 45px;
+}
+
+div.loader.hidden {
+  -webkit-animation: preloader 0.3s;
+          animation: preloader 0.3s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes preloader {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes preloader {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 .navbar {
   min-height: 70px;
 }
@@ -28,17 +83,6 @@ body {
 
 nav.bg-dark {
   background-color: #000 !important;
-}
-
-.picHover {
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
-}
-
-body.hasHover .picHover:hover {
-  -webkit-filter: none;
-          filter: none;
-  cursor: pointer;
 }
 
 .carousel-caption {
@@ -62,8 +106,15 @@ body.hasHover .picHover:hover {
   text-shadow: 1px 1px #000;
 }
 
-.pt-custom {
-  padding-top: 1.7rem !important;
+.picHover {
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+body.hasHover .picHover:hover {
+  -webkit-filter: none;
+          filter: none;
+  cursor: pointer;
 }
 
 .video-wrapper {
@@ -80,18 +131,6 @@ body.hasHover .picHover:hover {
   border: 3px solid #111;
   -webkit-box-shadow: 1px 1px 4px #fff;
           box-shadow: 1px 1px 4px #fff;
-}
-
-div#exampleModalCenter.modal {
-  color: #000;
-}
-
-body.modal-open > :not(.modal) {
-  -webkit-filter: blur(1px);
-  -moz-filter: blur(1px);
-  -o-filter: blur(1px);
-  -ms-filter: blur(1px);
-  filter: blur(2px);
 }
 
 div#programs {
@@ -167,14 +206,6 @@ div#programs div.card:nth-child(2) h5 span.no-wrap {
   white-space: nowrap;
 }
 
-div.footer-wrapper {
-  background-color: #000;
-}
-
-div.footer-wrapper .footer {
-  min-height: 120px;
-}
-
 div.media-wrapper {
   background: #1e0033;
   background: linear-gradient(157deg, #1e0033 0%, #170026 25%, black 65%);
@@ -233,6 +264,14 @@ body.hasHover div.media-wrapper div.media a:nth-child(3):hover {
 
 body.hasHover div.media-wrapper div.media a:nth-child(4):hover {
   background-color: #d68204;
+}
+
+div.footer-wrapper {
+  background-color: #000;
+}
+
+div.footer-wrapper .footer {
+  min-height: 120px;
 }
 
 .container .row .about-page-text {
@@ -471,5 +510,7 @@ body.hasHover div.media-wrapper div.media a:nth-child(4):hover {
 a.navbar-brand {
   -webkit-animation: logoAnimation 1s forwards 0s ease;
           animation: logoAnimation 1s forwards 0s ease;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
 }
 /*# sourceMappingURL=Style.css.map */
