--- a/css/Style.css
+++ b/css/Style.css
@@ -513,4 +513,32 @@ a.navbar-brand {
   -webkit-animation-delay: 0.3s;
           animation-delay: 0.3s;
 }
+
+div.container.form-bck {
+  margin-top: 5%;
+  background: linear-gradient(135deg, #1e0033 20%, #000 20%);
+}
+
+div.container.form-bck i {
+  font-size: 110px;
+  -webkit-transform: rotate(-43.5deg);
+          transform: rotate(-43.5deg);
+}
+
+div.container.form-bck h1 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+div.container.form-bck .form-group input.btn {
+  display: inline-block;
+  background-color: #25003f;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: 1px #fff solid;
+  cursor: pointer;
+}
 /*# sourceMappingURL=Style.css.map */
