--- a/sass/Style.scss
+++ b/sass/Style.scss
@@ -235,6 +235,9 @@ div.footer-wrapper {
     min-height: 120px;
   }
 }
+div.bord {
+  border-top: 1px solid rgb(30, 0, 51);
+}
 
 //////////   ABOUT   //////////
 .container {
@@ -418,7 +421,7 @@ a.navbar-brand {
 div.container.form-bck {
   margin-top: 5%;
   background: linear-gradient(135deg, rgb(30, 0, 51) 20%, #000 20%);
-  i {
+  i.letter-img {
     font-size: 110px;
     transform: rotate(-43.5deg);
   }
@@ -427,7 +430,6 @@ div.container.form-bck {
     letter-spacing: 1px;
     font-weight: bold;
   }
-
   .form-group input.btn {
     display: inline-block;
     background-color: rgb(37, 0, 63);
@@ -437,5 +439,39 @@ div.container.form-bck {
     text-transform: uppercase;
     border: 1px #fff solid;
     cursor: pointer;
+  }
+  div.media a {
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 50%;
+    margin: 0 5px;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    box-shadow: 0px 3px 4px rgba(255, 255, 255, 0.5);
+    transition: all 0.3s ease;
+    body.hasHover &:hover > i {
+      transform: scale(1.2) rotate(-25deg);
+      color: #fff;
+    }
+    body.hasHover &:hover {
+      transform: translate(0, -5px);
+    }
+    body.hasHover &:nth-child(1):hover {
+      background-color: #e4405f;
+    }
+    body.hasHover &:nth-child(2):hover {
+      background-color: #3b5999;
+    }
+    body.hasHover &:nth-child(3):hover {
+      background-color: #cd201f;
+    }
+    body.hasHover &:nth-child(4):hover {
+      background-color: #d68204;
+    }
   }
 }
